--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -108,6 +108,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 # > 局域网地址
 RULE-SET,LAN,DIRECT
+# CTC
+DOMAIN-KEYWORD,www.jinglongyu.com,Proxy
 # > ASN
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
 # > GeoIP China
