--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -171,8 +171,9 @@ ip6-cidr, fe80::/10, direct
 ip-cidr, 203.107.1.1/24, reject
 ip-cidr, 183.240.197.130/32, direct
 
-# Nexitally
+# 机场订阅
 host, rjptcl.lol, direct
+host, www.jinglongyu.com, proxy
 
 # Safari 防跳转
 host, app-site-association.cdn-apple.com, reject
