--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -40,24 +40,24 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
 
 [Proxy Group]
-Proxy = select, Nexitally, 守候, Metaverse, Atomlantis, NewYun
+通透世界 = select, Nexitally, 守候, Metaverse, Atomlantis, NewYun
 Nexitally = select, policy-path=https://sub.store/download/Nexitally, update-interval=86400
 守候 = select, policy-path=https://sub.store/download/wait, update-interval=86400
 Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400
 Atomlantis = select, policy-path=https://sub.store/download/Atomlantis, update-interval=86400
 NewYun = select, policy-path=https://sub.store/download/newyun, update-interval=86400
-Apple = select, DIRECT, Proxy
-Bilibili = select, DIRECT, Proxy, 香港, 台湾
-Telegram = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-TikTok = select, Proxy, DIRECT, 日本, 美国
-Instagram = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-Twitter = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-PikPak = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-Google = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
-Emby = select, Proxy, 守候
-国外媒体 = select, Proxy, 香港, 台湾, 新加坡, 日本, 美国
+Apple = select, DIRECT, 通透世界
+Bilibili = select, DIRECT, 通透世界, 香港, 台湾
+Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+TikTok = select, 通透世界, DIRECT, 日本, 美国
+Instagram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+Twitter = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+Google = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+Emby = select, 通透世界, 守候
+国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 Guard = select, REJECT, DIRECT
-Final = select, Proxy, DIRECT
+Final = select, 通透世界, DIRECT
 香港 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400
 台湾 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400
 新加坡 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400
@@ -98,9 +98,9 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Privacy/Privacy_Domain.list,Guard
 # > Hijacking 运营商劫持或恶意网站
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Hijacking/Hijacking.list,Guard
-# > Proxy
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy.list,Proxy
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy_Domain.list,Proxy
+# > 通透世界
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy.list,通透世界
+DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Proxy/Proxy_Domain.list,通透世界
 # > China
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Download/Download.list,DIRECT
@@ -110,7 +110,7 @@ IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 RULE-SET,LAN,DIRECT
 # > 机场订阅
 DOMAIN,rjptcl.lol,DIRECT
-DOMAIN-KEYWORD,www.jinglongyu.com,Proxy
+DOMAIN-KEYWORD,www.jinglongyu.com,通透世界
 # > ASN
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
 # > GeoIP China
