--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -58,11 +58,11 @@ Emby = select, 通透世界, 守候
 国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 Guard = select, REJECT, DIRECT
 Final = select, 通透世界, DIRECT
-香港 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇭🇰|香港|HK|Hong, update-interval=86400
-台湾 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, update-interval=86400
-新加坡 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, update-interval=86400
-日本 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇯🇵|日本|JP|Japan, update-interval=86400
-美国 = select, policy-path=https://sub.store/download/Nexitally, policy-regex-filter=🇺🇸|美国|US|United, update-interval=86400
+香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
+台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
+新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
+日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
+美国 = select, policy-regex-filter=🇺🇸|美国|US|United, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 
 [Rule]
 # > 微信
