--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -57,7 +57,7 @@ Google = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 Emby = select, 通透世界, 守候
 国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 Guard = select, REJECT, DIRECT
-Final = select, 通透世界, DIRECT
+地爆天星 = select, 通透世界, DIRECT
 香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
@@ -116,4 +116,4 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > GeoIP China
 # GEOIP,CN,DIRECT
 # > DNS 查询失败走 Final 规则
-FINAL,Final,dns-failed
+FINAL,地爆天星,dns-failed
