--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -53,10 +53,9 @@ TikTok = select, 通透世界, DIRECT, 日本, 美国
 Instagram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 Twitter = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
-Google = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
 Emby = select, 通透世界, 守候
 国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
-Guard = select, REJECT, DIRECT
+Guard = select, REJECT-TINYGIF, REJECT, DIRECT
 地爆天星 = select, 通透世界, DIRECT
 香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
@@ -72,7 +71,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > Bilibili
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/BiliBili/BiliBili.list,Bilibili
 # > 谷歌服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,Google
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Google/Google.list,通透世界
 # > Telegram
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
 # > TikTok
@@ -115,5 +114,5 @@ DOMAIN-KEYWORD,www.jinglongyu.com,通透世界
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
 # > GeoIP China
 # GEOIP,CN,DIRECT
-# > DNS 查询失败走 Final 规则
-FINAL,地爆天星,dns-failed
+# > 最终地爆天星
+FINAL,地爆天星
