--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -114,5 +114,5 @@ DOMAIN-KEYWORD,www.jinglongyu.com,通透世界
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaASN/ChinaASN.list,DIRECT
 # > GeoIP China
 # GEOIP,CN,DIRECT
-# > 最终地爆天星
+# > 最终->地爆天星
 FINAL,地爆天星
