--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -48,20 +48,20 @@ Atomlantis = select, policy-path=https://sub.store/download/Atomlantis, update-i
 NewYun = select, policy-path=https://sub.store/download/newyun, update-interval=86400
 Apple = select, DIRECT, 通透世界
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾
-Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
-TikTok = select, 通透世界, DIRECT, 日本, 美国
-Instagram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
-Twitter = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
-PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
+TikTok = select, 通透世界, DIRECT, 日本, 美利坚
+Instagram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
+Twitter = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
+PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
 Emby = select, 通透世界, 守候
-国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美国
+国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
 Guard = select, REJECT-TINYGIF, REJECT, DIRECT
 地爆天星 = select, 通透世界, DIRECT
 香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
-美国 = select, policy-regex-filter=🇺🇸|美国|US|United, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
+美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
 
 [Rule]
 # > 微信
