--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -121,10 +121,15 @@ parsers: # array
         let proxies_HK = proxies_All.filter(e => e.name.includes('🇭🇰'))
         if (name === '守候') {
           let proxies_HK_001 = proxies_HK.filter(e => e.name.includes('0.01'))
+          let proxies_HK_01 = proxies_HK.filter(e => e.name.includes('0.1'))
           let proxies_HK_02 = proxies_HK.filter(e => e.name.includes('0.2'))
-          let proxies_HK_Other = proxies_HK.filter(e => !e.name.includes('0.01') && !e.name.includes('0.2'))
+          proxies_HK_02.forEach(function (e, index) {
+            e.name = e.name + (index + 1)
+          })
+          let proxies_HK_Other = proxies_HK.filter(e => !e.name.includes('0.01') && !e.name.includes('0.1') && !e.name.includes('0.2'))
           proxies_HK = []
           proxies_HK.push(...proxies_HK_001)
+          proxies_HK.push(...proxies_HK_01)
           proxies_HK.push(...proxies_HK_02)
           proxies_HK.push(...proxies_HK_Other)
         }
