--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -21,7 +21,7 @@ test-timeout = 3
 # > Internet 测试 URL
 internet-test-url = http://www.apple.com/library/test/success.html
 # > 代理测速 URL
-proxy-test-url = http://cp.cloudflare.com/generate_204
+proxy-test-url = http://1.1.1.1/generate_204
 # > GeoIP数据库
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 # > 排除简单主机名
