--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -40,12 +40,11 @@ skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10
 always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
 
 [Proxy Group]
-通透世界 = select, Nexitally, 守候, Metaverse, Atomlantis, NewYun
+通透世界 = select, Nexitally, 守候, Metaverse, NewYun
 Nexitally = select, policy-path=https://sub.store/download/Nexitally, update-interval=86400
 守候 = select, policy-path=https://sub.store/download/wait, update-interval=86400
 Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400
-Atomlantis = select, policy-path=https://sub.store/download/Atomlantis, update-interval=86400
-NewYun = select, policy-path=https://sub.store/download/newyun, update-interval=86400
+TAG = select, policy-path=https://sub.store/download/TAG, update-interval=86400
 Apple = select, DIRECT, 通透世界
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾
 Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
@@ -55,13 +54,13 @@ Twitter = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
 PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
 Emby = select, 通透世界, 守候
 国外媒体 = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚
-Guard = select, REJECT-TINYGIF, REJECT, DIRECT
-地爆天星 = select, 通透世界, DIRECT
-香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
-台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
-新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
-日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
-美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, include-other-group="Nexitally, 守候, LinkCube, Metaverse, Atomlantis, NewYun", update-interval=86400
+Guard = select, REJECT, REJECT-TINYGIF, DIRECT
+地爆天星 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚
+香港 = select, policy-regex-filter=🇭🇰|香港|HK|Hong, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
+台湾 = select, policy-regex-filter=🇨🇳|台湾|TW|Taiwan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
+新加坡 = select, policy-regex-filter=🇸🇬|新加坡|SG|Singapore, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
+日本 = select, policy-regex-filter=🇯🇵|日本|JP|Japan, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
+美利坚 = select, policy-regex-filter=🇺🇸|美国|US|United, include-other-group="Nexitally, 守候, LinkCube, Metaverse, TAG", update-interval=86400
 
 [Rule]
 # > 微信
