--- a/QuantumultX/QuanX.conf
+++ b/QuantumultX/QuanX.conf
@@ -15,7 +15,7 @@ resource_parser_url = https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/mas
 server_check_timeout = 3000
 
 # 对 server_check_url 指定的网址进行相应测试,以确认节点的可用性
-server_check_url = http://1.1.1.1/generate_204
+server_check_url = http://cp.cloudflare.com/generate_204
 
 # geo_location_checker用于节点页面的节点信息展示,可完整自定义展示内容与方式
 geo_location_checker = http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/QuantumultX/js/IP-API.js
