--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -15,8 +15,6 @@ parsers: # array
 
         if (name === 'Nexitally') {
           proxies_All = proxies_All.filter(e => !e.name.includes('Premium'))
-        } else if (name === 'Lend喵呜') {
-          proxies_All.forEach(e => e.name = e.name.replace("Daily", "喵呜").replace("RELAY", "喵呜"))
         } else if (name === '守候') {
            proxies_All.forEach(function (e, index) {
             e.name = e.name.replace("[", "")
@@ -25,7 +23,7 @@ parsers: # array
             e.name = e.name.replace(" | ", "·")
             e.name = e.name.replace("0.20x", "0.2x").replace("1.00x", "1x").replace("2.00x", "2x").replace("30.0x", "30x")
             e.name = e.name.replace("香港", "HK").replace("台湾", "TW").replace("狮城", "SG").replace("日本", "JP").replace("美国", "US")
-      
+    
             let name = e.name.substring(5);
             let flag = e.name.substring(0, 4);
             let country = name.split(' ')[0]
@@ -33,8 +31,6 @@ parsers: # array
             let line = name.split(' ')[2]
             e.name = flag + ' ' + country + ' ' + line + ' ' + rate;
           })
-        } else if (name === 'LinkCube') {
-          proxies_All.forEach(e => e.name = e.name.replace("专线 深圳-", ""))
         } else if (name === 'Ayanami') {
           proxies_All.forEach(e => {
             if (e.name.includes('🇭🇰')) {
@@ -67,11 +63,11 @@ parsers: # array
           let proxies02 = proxies_All.filter(e => e.name.includes('0.2x'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.2x'))
       
-          let proxiesWcloud = proxies_All.filter(e => e.name.includes('Wcloud'))
-          proxies_All = proxies_All.filter(e => !e.name.includes('Wcloud'))
-      
           let proxies04 = proxies_All.filter(e => e.name.includes('0.4x'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.4x'))
+      
+          let proxiesWcloud = proxies_All.filter(e => e.name.includes('Wcloud'))
+          proxies_All = proxies_All.filter(e => !e.name.includes('Wcloud'))
       
           let proxies_HK = proxies_All.filter(e => e.name.includes('🇭🇰'))
           proxies_All = proxies_All.filter(e => !e.name.includes('🇭🇰'))
@@ -92,6 +88,7 @@ parsers: # array
           proxies_All = proxies_All.filter(e => !e.name.includes('🇺🇸'))
       
           sortProxies.push(...proxies02)
+          sortProxies.push(...proxies04)
           sortProxies.push(...proxiesWcloud)
           sortProxies.push(...proxies_HK)
           sortProxies.push(...proxies_TW)
@@ -99,7 +96,6 @@ parsers: # array
           sortProxies.push(...proxies_SG)
           sortProxies.push(...proxies_JP)
           sortProxies.push(...proxies_US)
-          //sortProxies.push(...proxies04)
           sortProxies.push(...proxies_All)
       
           rawObj.proxies = sortProxies
@@ -107,22 +103,16 @@ parsers: # array
         } else if (name === 'To2') {
           proxies_All.forEach(e => e.name = e.name.replace(" 購物", ""))
         }
-    
+
         let sortProxies = []
         let proxies_First = []
-        if (name === 'Metaverse') {
-          proxies_First = proxies_All.filter(e => e.name.includes('0.2X'))
-          proxies_All = proxies_All.filter(e => !e.name.includes('0.2X'))
-        } else if (name === 'Lend喵呜') {
+        if (name === 'Lend喵呜') {
           proxies_First = proxies_All.filter(e => e.name.includes('0.01'))
           proxies_All = proxies_All.filter(e => !e.name.includes('0.01'))
           
           let proxies_DIRECT = proxies_All.filter(e => e.name.includes('DIRECT'))
           proxies_All = proxies_All.filter(e => !e.name.includes('DIRECT'))
           proxies_First.push(...proxies_DIRECT)
-        } else if (name === 'VAE') {
-          proxies_First = proxies_All.filter(e => e.name.includes('0.01'))
-          proxies_All = proxies_All.filter(e => !e.name.includes('0.01'))
         }
 
         let proxies_HK = proxies_All.filter(e => e.name.includes('🇭🇰'))
@@ -284,7 +274,7 @@ parsers: # array
         - proxy-groups.🇹🇼 台湾节点.proxies.0+[]proxyNames|(🇨🇳|🇹🇼|台湾|台灣|TW|Taiwan)
         - proxy-groups.🇸🇬 新加坡节点.proxies.0+[]proxyNames|(🇸🇬|新加坡|狮城|SG|Singapore)
         - proxy-groups.🇯🇵 日本节点.proxies.0+[]proxyNames|(🇯🇵|日本|东京|JP|Japan)
-        - proxy-groups.🇺🇸 美国节点.proxies.0+[]proxyNames|(🇺🇸|美国|美國|US|American)
+        - proxy-groups.🇺🇸 美国节点.proxies.0+[]proxyNames|(🇺🇸|美国|US|American)
         - proxy-groups.⚠ 故障转移.proxies=[]proxyNames
 
       mix-rule-providers: # 添加规则集
@@ -292,21 +282,21 @@ parsers: # array
         Direct:           # 规则修正
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.yaml
           path: ./ruleset/Direct.yaml
           interval: 86400
 
         Lan:              # 局域网
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/LocalAreaNetwork.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.yaml
           path: ./ruleset/Lan.yaml
           interval: 86400
 
         Download:         # 下载服务
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Download/Download.yaml
           path: ./ruleset/Download.yaml
           interval: 86400
 
@@ -320,91 +310,91 @@ parsers: # array
         Apple:            # 苹果服务
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple_Classical.yaml
           path: ./ruleset/Apple.yaml
           interval: 86400
 
         BiliBili:         # 哔哩哔哩
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
           path: ./ruleset/BiliBili.yaml
           interval: 86400
 
         Microsoft:        # 微软服务
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.yaml
           path: ./ruleset/Microsoft.yaml
           interval: 86400
 
         Youtube:          # 油管视频
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.yaml
           path: ./ruleset/Youtube.yaml
           interval: 86400
 
         Google:           # 谷歌服务
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
           path: ./ruleset/Google.yaml
           interval: 86400
 
         Telegram:         # 电报消息
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
           path: ./ruleset/Telegram.yaml
           interval: 86400
 
         Twitter:          # 推特消息
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.yaml
           path: ./ruleset/Twitter.yaml
           interval: 86400
 
         Game:             # 游戏平台
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.yaml
           path: ./ruleset/Game.yaml
           interval: 86400
 
         OpenAI:           # ChatGPT
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.yaml
           path: ./ruleset/OpenAI.yaml
           interval: 86400
 
         PikPak:         # PikPak
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PikPak/PikPak.yaml
           path: ./ruleset/PikPak.yaml
           interval: 86400
 
         ChinaIP:          # 中国大陆
           type: http
           behavior: classical
-          url: https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical.yaml
+          url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_Classical.yaml
           path: ./ruleset/China.yaml
           interval: 86400
 
         GlobalMedia:      # 国际媒体
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia_Classical.yaml
           path: ./ruleset/GlobalMedia.yaml
           interval: 86400
 
         Global:        # 代理网站
           type: http
           behavior: classical
-          url:  https://ghproxy.com/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Classical.yaml
+          url:  https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Global/Global_Classical.yaml
           path: ./ruleset/Global.yaml
           interval: 86400
 
