--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -45,7 +45,7 @@ parsers: # array
           proxies_HK.push(...proxies_HK_EIP)
           proxies_All = proxies_All.filter(e => !e.name.includes('🇭🇰'))
       
-          let proxies_TW = proxies_All.filter(e => e.name.includes('🇨🇳'))
+          let proxies_TW = proxies_All.filter(e => e.name.includes('🇹🇼'))
           let proxies_TW_10 = proxies_TW.filter(e => e.name.includes('1x'))
           let proxies_TW_02 = proxies_TW.filter(e => e.name.includes('0.2x'))
           let proxies_TW_01 = proxies_TW.filter(e => e.name.includes('0.1x'))
@@ -53,7 +53,7 @@ parsers: # array
           proxies_TW.push(...proxies_TW_10)
           proxies_TW.push(...proxies_TW_02)
           proxies_TW.push(...proxies_TW_01)
-          proxies_All = proxies_All.filter(e => !e.name.includes('🇨🇳'))
+          proxies_All = proxies_All.filter(e => !e.name.includes('🇹🇼'))
       
           let proxies_SG = proxies_All.filter(e => e.name.includes('🇸🇬'))
           let proxies_SG_10 = proxies_SG.filter(e => e.name.includes('1x'))
