--- a/Clash/config/parser.yaml
+++ b/Clash/config/parser.yaml
@@ -212,10 +212,21 @@ parsers: # array
           let cipher = "aes-128-gcm"
           let password = proxies_HK[0].password
           let udp = true
-          sortProxies.unshift({ name:'🇱🇺 LU 硝酸二甲酯 0.01x', type, server: "traffic-in-lite.811920.xyz", port: 50009, cipher, password, udp })
-          sortProxies.unshift({ name: '🇸🇬 SG 苯巴比妥钠 0.01x', type, server: "traffic-in-lite.811920.xyz", port: 50012, cipher, password, udp })
-          sortProxies.unshift({ name: '🇭🇰 HK 丁香酰氧胺 0.01x', type, server: "traffic-in-lite.811920.xyz", port: 50013, cipher, password, udp })
-          sortProxies.unshift({name: '🇸🇬 TG 碳酸二甲酯', type, server: "traffic-in-04.811920.xyz", port: 54001, cipher, password, udp})
+      
+          let lowProxies = []
+          let lowServer = "traffic-in-lite.811920.xyz"
+          lowProxies.push({ name: '🇭🇰 HK 丁香酰氧胺 0.01x', type, server: lowServer, port: 50013, cipher, password, udp })
+          lowProxies.push({ name: '🇸🇬 SG 苯巴比妥钠 0.01x', type, server: lowServer, port: 50012, cipher, password, udp })
+          lowProxies.push({ name:'🇱🇺 LU 硝酸二甲酯 0.01x', type, server: lowServer, port: 50009, cipher, password, udp })
+
+          let extraProxies = []
+          let extraServer = "traffic-in-a.811920.xyz"
+          extraProxies.push({name: '🇸🇬 TG 碳酸二甲酯 1x', type, server: extraServer, port: 54001, cipher, password, udp})
+          extraProxies.push({name: '🇲🇴 TK 澳士蛋白酶 3x', type, server: extraServer, port: 54002, cipher, password, udp})
+          extraProxies.push({name: '🇯🇵 TK 日库木糖醇 3x', type, server: extraServer, port: 54003, cipher, password, udp})
+          extraProxies.push({name: '🇺🇸 TK 美罗培南素 3x', type, server: extraServer, port: 54005, cipher, password, udp})
+      
+          sortProxies = lowProxies.concat(extraProxies).concat(sortProxies);
         }
       
         rawObj.proxies = sortProxies
