--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -142,3 +142,6 @@ FINAL,地爆天星
 ^http:\/\/bm7\/(.*?)(_.*)?$ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/$1/$1$2.list 302
 
 ^http:\/\/xn--qeiz318m\/HTTPDNS http://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/HTTPDNS.Block.list 302
+
+[MITM]
+hostname = -api.revenuecat.com, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
