--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -74,6 +74,8 @@ DOMAIN,synn.cc,通透世界
 DOMAIN,acl.syyn.pw,通透世界
 DOMAIN,subcc.sntp.uk,DIRECT
 DOMAIN,www.jinglongyu.com,通透世界
+DOMAIN,mail.morefast.link,通透世界
+
 # > 🍟🍟
 RULE-SET,http://❤️🍟/HTTPDNS,REJECT
 
@@ -82,13 +84,11 @@ DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject.conf,Guard,extended-mat
 RULE-SET,https://ruleset.skk.moe/List/non_ip/reject.conf,Guard,extended-matching
 RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
 RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
-# Apple & Microsoft 国内 CDN 域名
+
+# > Apple & Microsoft 国内 CDN 域名
 RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cdn.conf,DIRECT
-# RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,DIRECT
 RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,DIRECT
-# > 局域网地址
-RULE-SET,https://ruleset.skk.moe/List/non_ip/lan.conf,DIRECT
-RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
 
 # > 微信
 RULE-SET,http://bm7/WeChat,DIRECT
@@ -126,13 +126,15 @@ RULE-SET,https://ruleset.skk.moe/List/ip/stream.conf,流媒体,extended-matching
 RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,通透世界
 RULE-SET,http://bm7/Proxy_All,通透世界
 # > China
-RULE-SET,http://bm7/HuYa,DIRECT
 RULE-SET,https://ruleset.skk.moe/List/non_ip/domestic.conf,DIRECT
 RULE-SET,https://ruleset.skk.moe/List/non_ip/direct.conf,DIRECT
 RULE-SET,http://bm7/China,DIRECT
 RULE-SET,http://bm7/Download,DIRECT
 # > ASN
 RULE-SET,http://bm7/ChinaASN,DIRECT
+# > 局域网地址
+RULE-SET,https://ruleset.skk.moe/List/non_ip/lan.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
 # > GeoIP China
 GEOIP,CN,DIRECT
 # > FINAL规则-地爆天星
