--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -70,14 +70,24 @@ ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400,
 
 [Rule]
 # > 机场订阅
+DOMAIN,sub.sstap.su,DIRECT
 DOMAIN,synn.cc,通透世界
+DOMAIN,portal.jiasu.ai,通透世界
 DOMAIN,acl.syyn.pw,通透世界
-DOMAIN,subcc.sntp.uk,DIRECT
+DOMAIN,subcc.sntp.uk,独断万古
 DOMAIN,www.jinglongyu.com,通透世界
 DOMAIN,mail.morefast.link,通透世界
 
+DOMAIN,v3.paddleapi.com,REJECT
+DOMAIN-KEYWORD,macked.app,通透世界
+DOMAIN,appstorrent.ru,DIRECT
+
 # > 🍟🍟
 RULE-SET,http://❤️🍟/HTTPDNS,REJECT
+
+# > 局域网地址
+RULE-SET,https://ruleset.skk.moe/List/non_ip/lan.conf,DIRECT
+RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
 
 # > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
 DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject.conf,Guard,extended-matching
@@ -96,9 +106,14 @@ RULE-SET,http://bm7/WeChat,DIRECT
 RULE-SET,http://bm7/ByteDance,DIRECT
 # > 抖音
 # RULE-SET,http://bm7/DouYin,DIRECT
+# > 苹果服务
+RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_services.conf,Apple,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft.conf,Apple,extended-matching
 # > Bilibili
 RULE-SET,http://bm7/BiliBili,Bilibili
-# Telegram
+# > 谷歌服务
+RULE-SET,http://bm7/Google,通透世界
+# > Telegram
 RULE-SET,https://ruleset.skk.moe/List/non_ip/telegram.conf,Telegram
 RULE-SET,https://ruleset.skk.moe/List/ip/telegram.conf,Telegram
 RULE-SET,https://ruleset.skk.moe/List/ip/telegram_asn.conf,Telegram
@@ -117,28 +132,27 @@ DOMAIN-SUFFIX,cn2gias.uk,守候Emby
 # > SYNEmby
 DOMAIN,stream.synn.cc,SYNEmby
 DOMAIN,stream-zz.synn.cc,SYNEmby
+# > Jetbrains
+RULE-SET,http://bm7/Jetbrains,通透世界
 # > 国内流媒体
 RULE-SET,http://bm7/ChinaMedia,DIRECT
 # > 国外流媒体
 RULE-SET,https://ruleset.skk.moe/List/non_ip/stream.conf,流媒体,extended-matching
 RULE-SET,https://ruleset.skk.moe/List/ip/stream.conf,流媒体,extended-matching
-# > Proxy
-RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,通透世界
-RULE-SET,http://bm7/Proxy_All,通透世界
 # > China
 RULE-SET,https://ruleset.skk.moe/List/non_ip/domestic.conf,DIRECT
 RULE-SET,https://ruleset.skk.moe/List/non_ip/direct.conf,DIRECT
 RULE-SET,http://bm7/China,DIRECT
 RULE-SET,http://bm7/Download,DIRECT
+# > Proxy
+RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,通透世界
+RULE-SET,http://bm7/Proxy_All,通透世界
 # > ASN
 RULE-SET,http://bm7/ChinaASN,DIRECT
-# > 局域网地址
-RULE-SET,https://ruleset.skk.moe/List/non_ip/lan.conf,DIRECT
-RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
 # > GeoIP China
 GEOIP,CN,DIRECT
-# > FINAL规则-地爆天星
-FINAL,地爆天星
+# > FINAL规则-映照诸天
+FINAL,映照诸天
 
 [URL Rewrite]
 ^http:\/\/bm7\/(.*?)(_.*)?$ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/$1/$1$2.list 302
