--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -71,7 +71,6 @@ ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400,
 [Rule]
 # > 机场订阅
 DOMAIN,sub.sstap.su,DIRECT
-DOMAIN,synn.cc,通透世界
 DOMAIN,portal.jiasu.ai,通透世界
 DOMAIN,acl.syyn.pw,通透世界
 DOMAIN,subcc.sntp.uk,独断万古
@@ -82,23 +81,23 @@ DOMAIN,v3.paddleapi.com,REJECT
 DOMAIN-KEYWORD,macked.app,通透世界
 DOMAIN,appstorrent.ru,DIRECT
 
-# > 🍟🍟
-RULE-SET,http://❤️🍟/HTTPDNS,REJECT
+# > BlockHttpDNS
+RULE-SET,http://bm7/BlockHttpDNS,REJECT
 
 # > 局域网地址
-RULE-SET,https://ruleset.skk.moe/List/non_ip/lan.conf,DIRECT
-RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
+RULE-SET,http://skk/non_ip/lan.conf,DIRECT
+RULE-SET,http://skk/ip/lan.conf,DIRECT
 
 # > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject.conf,Guard,extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/reject.conf,Guard,extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
+DOMAIN-SET,http://skk/domainset/reject.conf,Guard,extended-matching
+RULE-SET,http://skk/non_ip/reject.conf,Guard,extended-matching
+RULE-SET,http://skk/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
+RULE-SET,http://skk/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
 
 # > Apple & Microsoft 国内 CDN 域名
-RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cdn.conf,DIRECT
-RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,DIRECT
-RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,DIRECT
+RULE-SET,http://skk/non_ip/apple_cdn.conf,DIRECT
+RULE-SET,http://skk/non_ip/microsoft_cdn.conf,DIRECT
+RULE-SET,http://skk/non_ip/apple_cn.conf,DIRECT
 
 # > 微信
 RULE-SET,http://bm7/WeChat,DIRECT
@@ -107,16 +106,16 @@ RULE-SET,http://bm7/ByteDance,DIRECT
 # > 抖音
 # RULE-SET,http://bm7/DouYin,DIRECT
 # > 苹果服务
-RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_services.conf,Apple,extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft.conf,Apple,extended-matching
+RULE-SET,http://skk/non_ip/apple_services.conf,Apple,extended-matching
+RULE-SET,http://skk/non_ip/microsoft.conf,Apple,extended-matching
 # > Bilibili
 RULE-SET,http://bm7/BiliBili,Bilibili
 # > 谷歌服务
 RULE-SET,http://bm7/Google,通透世界
 # > Telegram
-RULE-SET,https://ruleset.skk.moe/List/non_ip/telegram.conf,Telegram
-RULE-SET,https://ruleset.skk.moe/List/ip/telegram.conf,Telegram
-RULE-SET,https://ruleset.skk.moe/List/ip/telegram_asn.conf,Telegram
+RULE-SET,http://skk/non_ip/telegram.conf,Telegram
+RULE-SET,http://skk/ip/telegram.conf,Telegram
+RULE-SET,http://skk/ip/telegram_asn.conf,Telegram
 # > TikTok
 RULE-SET,http://bm7/TikTok,TikTok
 # > Instagram
@@ -126,38 +125,38 @@ RULE-SET,http://bm7/Twitter,X
 # > PikPak
 RULE-SET,http://bm7/PikPak,PikPak
 # > OpenAI
-RULE-SET,https://ruleset.skk.moe/List/non_ip/ai.conf,OpenAI
+RULE-SET,http://skk/non_ip/ai.conf,OpenAI
+# > CC公益Emby
+DOMAIN,cc.coemn.com,通透世界
 # > 守候Emby
 DOMAIN-SUFFIX,cn2gias.uk,守候Emby
 # > SYNEmby
-DOMAIN,stream.synn.cc,SYNEmby
-DOMAIN,stream-zz.synn.cc,SYNEmby
+DOMAIN-SUFFIX,synn.cc,SYNEmby
 # > Jetbrains
 RULE-SET,http://bm7/Jetbrains,通透世界
 # > 国内流媒体
 RULE-SET,http://bm7/ChinaMedia,DIRECT
 # > 国外流媒体
-RULE-SET,https://ruleset.skk.moe/List/non_ip/stream.conf,流媒体,extended-matching
-RULE-SET,https://ruleset.skk.moe/List/ip/stream.conf,流媒体,extended-matching
+RULE-SET,http://skk/non_ip/stream.conf,流媒体,extended-matching
+RULE-SET,http://skk/ip/stream.conf,流媒体,extended-matching
 # > China
-RULE-SET,https://ruleset.skk.moe/List/non_ip/domestic.conf,DIRECT
-RULE-SET,https://ruleset.skk.moe/List/non_ip/direct.conf,DIRECT
+RULE-SET,http://skk/non_ip/domestic.conf,DIRECT
+RULE-SET,http://skk/non_ip/direct.conf,DIRECT
 RULE-SET,http://bm7/China,DIRECT
 RULE-SET,http://bm7/Download,DIRECT
 # > Proxy
-RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,通透世界
+RULE-SET,http://skk/non_ip/global.conf,通透世界
 RULE-SET,http://bm7/Proxy_All,通透世界
 # > ASN
 RULE-SET,http://bm7/ChinaASN,DIRECT
 # > GeoIP China
 GEOIP,CN,DIRECT
 # > FINAL规则-映照诸天
-FINAL,映照诸天
+FINAL,映照诸天,dns-failed
 
 [URL Rewrite]
 ^http:\/\/bm7\/(.*?)(_.*)?$ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/$1/$1$2.list 302
-
-^http:\/\/xn--qeiz318m\/HTTPDNS http://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/HTTPDNS.Block.list 302
+^http:\/\/skk https://ruleset.skk.moe/List 302
 
 [MITM]
 hostname = -api.revenuecat.com, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
