--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -66,7 +66,7 @@ Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengx
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
 CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/pokemon/095.png
 ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
-TNet = select, policy-path=https://sub.store/download/TNet, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TsunamiNet.png
+TsunamiNet = select, policy-path=https://sub.store/download/TsunamiNet, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TsunamiNet.png
 
 [Rule]
 # > 机场订阅
