--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -131,7 +131,8 @@ DOMAIN-SUFFIX,synn.cc,SYNEmby
 # > Baisi 百思
 DOMAIN-SUFFIX,baisi.pro,守候Emby
 # > CC公益Emby
-DOMAIN,cc.coemn.com,守候Emby
+DOMAIN-SUFFIX,coemn.com,守候Emby
+DOMAIN-SUFFIX,carryz.net,守候Emby
 # > 守候Emby
 DOMAIN-SUFFIX,cn2gias.uk,守候Emby
 # > Jetbrains
