--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -34,16 +34,16 @@ exclude-simple-hostnames = true
 geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 [Proxy Group]
-通透世界 = select, 独断万古, Linkeless, SSTAP, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, ESNC, CTC, ACA, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
+通透世界 = select, 独断万古, Linkeless, SSTAP, Metaverse, LinkCube, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, ESNC, CTC, ACA, TsunamiNet, CitrusLab, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
 映照诸天 = select, 通透世界, DIRECT, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Final.png
-独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/100.png
-Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Linkeless.png
-SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/004.png
-JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/JAS.AI.png
-Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/058.png
-SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/007.png
-独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/009.png
-To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
+独断万古 = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/129.png
+Linkeless = select, policy-path=https://sub.store/download/Linkeless, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1001.png
+SSTAP = select, policy-path=https://sub.store/download/SSTAP, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/120.png
+Metaverse = select, policy-path=https://sub.store/download/Metaverse, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1002.png
+LinkCube = select, policy-path=https://sub.store/download/LinkCube, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/LinkCube.png
+JAS.AI = select, policy-path=https://sub.store/download/JAS, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1003.png
+Ayanami = select, policy-path=https://sub.store/download/Ayanami, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1004.png
+SYN = select, policy-path=https://sub.store/download/SYN, update-interval=86400, policy-regex-filter=^(?!.*SP).*$, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/1005.png
 Apple = select, DIRECT, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Apple1.png
 Bilibili = select, DIRECT, 通透世界, 香港, 台湾, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Bilibili1.png
 Telegram = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/Telegram.png
@@ -53,9 +53,9 @@ PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩
 Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
 Twitter = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
 SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/ntRRR.png, policy-regex-filter=SP
-Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/GuGu.png
+Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/044.png
 Streaming = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
-Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/013.png
+Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/034.png
 香港 = select, policy-regex-filter=🇭🇰, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/HK.png
 台湾 = select, policy-regex-filter=🇨🇳, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/TW.png
 新加坡 = select, policy-regex-filter=🇸🇬, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/SG.png
@@ -63,10 +63,13 @@ Guard = select, REJECT, DIRECT, icon-url=https://raw.githubusercontent.com/mengx
 美利坚 = select, policy-regex-filter=🇺🇸, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/US.png
 韩国 = select, policy-regex-filter=🇰🇷, update-interval=86400, include-other-group="独断万古, Linkeless, SSTAP, 异次元杀阵, Ayanami, SYN, To2", icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/world/KR.png
 异次元杀阵 = select, policy-path=https://sub.store/download/dimension, update-interval=86400, icon-url=https://raw.githubusercontent.com/Twoandz9/TheMagic-Icons/main/Icons/Ciyuanyun.png
+To2 = select, policy-path=https://sub.store/download/To2, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/To2.png
+独角兽 = select, policy-path=https://sub.store/download/unicorn, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/009.png
 ESNC = select, policy-path=https://sub.store/download/ESNC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/ESNC.png
 CTC = select, policy-path=https://sub.store/download/CTC, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/008.png
 ACA = select, policy-path=https://sub.store/download/ACA, update-interval=86400, icon-url=https://raw.githubusercontent.com/lige47/QuanX-icon-rule/main/icon/aca.png
 TsunamiNet = select, policy-path=https://sub.store/download/TsunamiNet, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/TsunamiNet.png
+CitrusLab = select, policy-path=https://sub.store/download/CitrusLab, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/CitrusLab.png
 
 [Rule]
 # > 机场订阅
@@ -104,7 +107,7 @@ RULE-SET,http://bm7/WeChat,DIRECT
 # > 字节跳动
 RULE-SET,http://bm7/ByteDance,DIRECT
 # > 抖音
-# RULE-SET,http://bm7/DouYin,DIRECT
+RULE-SET,http://bm7/DouYin,DIRECT
 # > 苹果服务
 RULE-SET,http://skk/non_ip/apple_services.conf,Apple,extended-matching
 RULE-SET,http://skk/non_ip/microsoft.conf,Apple,extended-matching
@@ -121,14 +124,14 @@ RULE-SET,http://bm7/TikTok,TikTok
 # > Instagram
 RULE-SET,http://bm7/Instagram,Instagram
 # > Twitter
-RULE-SET,http://bm7/Twitter,X
+RULE-SET,http://bm7/Twitter,Twitter
 # > PikPak
 RULE-SET,http://bm7/PikPak,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
 # > SYNEmby
 DOMAIN-SUFFIX,synn.cc,SYNEmby
-# > Baisi 百思
+# > Baisi·百思
 DOMAIN-SUFFIX,baisi.pro,Emby
 # > CC公益Emby
 DOMAIN-SUFFIX,coemn.com,Emby
