--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -52,6 +52,7 @@ OpenAI = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩
 PikPak = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/app/PikPak.png
 Instagram = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Instagram1.png
 Twitter = select, 通透世界, JAS.AI, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Twitter.png
+MICU = select, DIRECT, 通透世界, Emby, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/MICU.png
 SYNEmby = select, policy-path=https://sub.store/download/SYN, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/emby/ntRRR.png, policy-regex-filter=SP
 Emby = select, policy-path=https://sub.store/download/wait, update-interval=86400, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/Pokemon/044.png
 Streaming = select, 通透世界, 香港, 台湾, 新加坡, 日本, 美利坚, 韩国, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/youtube.png
@@ -129,6 +130,8 @@ RULE-SET,http://bm7/Twitter,Twitter
 RULE-SET,http://bm7/PikPak,PikPak
 # > OpenAI
 RULE-SET,http://skk/non_ip/ai.conf,OpenAI
+# > MICU
+DOMAIN-SUFFIX,micu.hk,MICU
 # > SYNEmby
 DOMAIN-SUFFIX,synn.cc,SYNEmby
 # > Baisi·百思
