--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -4,34 +4,36 @@
 # 技术社区 - https://community.nssurge.com
 
 [General]
-# 日志级别
+# > 日志级别
 loglevel = notify
-# 节点超时
-test-timeout = 3
-# 直连测试 URL
-internet-test-url = http://www.baidu.com
-# 代理测速 URL
-proxy-test-url = http://1.1.1.1/generate_204
-# 游戏优化:开启后优先处理 UDP 数据，会增加系统负载
-udp-priority = false
-# UDP 回退行为
-udp-policy-not-supported-behaviour = REJECT
-# DNS 服务器
-dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
-# 加密 DNS
-encrypted-dns-server = quic://223.5.5.5, quic://223.6.6.6, https://1.12.12.12/dns-query, https://120.53.53.53/dns-query
-# IPv6 DNS 查询
-ipv6 = false
-# IPv6 VIF 模式
-ipv6-vif = disabled
-# DNS 劫持
-hijack-dns = *:53
-# 展示错误页面
+# > 展示错误页面
 show-error-page-for-reject = true
-# 排除简单主机名
+# > 节点超时
+test-timeout = 3
+# > 直连测试 URL
+internet-test-url = http://www.baidu.com
+# > 代理测速 URL
+proxy-test-url = http://1.1.1.1/generate_204
+# > GeoIP数据库
+geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
+# > DNS 服务器
+dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
+# > 加密 DNS
+encrypted-dns-server = quic://223.5.5.5, quic://223.6.6.6, https://1.12.12.12/dns-query, https://120.53.53.53/dns-query
+# > IPv6 DNS 查询
+ipv6 = false
+# > IPv6 VIF 模式
+ipv6-vif = disabled
+# > DNS 劫持
+hijack-dns = *:53
+# > 排除简单主机名
 exclude-simple-hostnames = true
-# 自定义 GeoIP 数据库
-geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
+# > 跳过代理
+skip-proxy = 192.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 127.0.0.1, localhost, *.local
+# > 游戏优化:开启后优先处理 UDP 数据，会增加系统负载
+udp-priority = false
+# > 当节点不支持UDP时，默认fallback 到reject
+udp-policy-not-supported-behaviour = REJECT
 
 [Proxy Group]
 通透世界 = select, 独断万古, Linkeless, SSTAP, Metaverse, LinkCube, JAS.AI, Ayanami, SYN, 独角兽, To2, 异次元杀阵, ESNC, CTC, ACA, TsunamiNet, CitrusLab, icon-url=https://raw.githubusercontent.com/mengxiaoZzz/air_conf/main/icon/144/Surge_Inky.png
