--- a/Surge/Surge Pro.conf
+++ b/Surge/Surge Pro.conf
@@ -95,10 +95,16 @@ RULE-SET,http://skk/non_ip/lan.conf,DIRECT
 RULE-SET,http://skk/ip/lan.conf,DIRECT
 
 # > SukkaW 广告拦截 / 隐私保护 / Malware 拦截 / Phiishing 拦截
+# > Non IP
+# > 基础的 12 万拦截域名
 DOMAIN-SET,http://skk/domainset/reject.conf,Guard,extended-matching
+# > 额外 20 万拦截域名，作为基础的补充，启用时需要搭配基础一起使用
+DOMAIN-SET,http://skk/domainset/reject_extra.conf,Guard,extended-matching
 RULE-SET,http://skk/non_ip/reject.conf,Guard,extended-matching
 RULE-SET,http://skk/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
 RULE-SET,http://skk/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
+# IP
+RULE-SET,http://skk/ip/reject.conf,REJECT-DROP
 
 # > Apple & Microsoft 国内 CDN 域名
 RULE-SET,http://skk/non_ip/apple_cdn.conf,DIRECT
@@ -150,16 +156,18 @@ RULE-SET,http://bm7/ChinaMedia,DIRECT
 # > 国外流媒体
 RULE-SET,http://skk/non_ip/stream.conf,Streaming,extended-matching
 RULE-SET,http://skk/ip/stream.conf,Streaming,extended-matching
+# > Proxy
+RULE-SET,http://skk/non_ip/global.conf,通透世界,extended-matching
+RULE-SET,http://bm7/Proxy/Proxy_All_No_Resolve,通透世界,extended-matching
 # > China
 RULE-SET,http://skk/non_ip/domestic.conf,DIRECT
 RULE-SET,http://skk/non_ip/direct.conf,DIRECT
 RULE-SET,http://bm7/China,DIRECT
 RULE-SET,http://bm7/Download,DIRECT
-# > Proxy
-RULE-SET,http://skk/non_ip/global.conf,通透世界
-RULE-SET,http://bm7/Proxy_All,通透世界
-# > ASN
-RULE-SET,http://bm7/ChinaASN,DIRECT
+# > China ASN
+RULE-SET,http://bm7/ChinaASN/ChinaASN_Resolve,DIRECT
+# > China 补全
+RULE-SET,https://raw.githubusercontent.com/Blankwonder/surge-list/master/cn.list,DIRECT
 # > GeoIP China
 GEOIP,CN,DIRECT
 # > FINAL规则-映照诸天
